--- a/public/login.html
+++ b/public/login.html
@@ -5,6 +5,7 @@
     <title>Vinyl Destination</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -18,6 +19,7 @@
         </div>
     </nav>
     <h1>Vinyl Destination</h1>
+    <div class="divider2"></div>
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
@@ -38,6 +40,37 @@
             </div>
         </div>
     </div>
+    <div class="divider2"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-7 col-md-offset-3">
+                <h2>Search For Your Music:</h2>
+            </div>
+            <form class="search-bar" action="action_page.php">
+                <input type="text" placeholder="Search.." name="search">
+                <button type="submit"><i class="fa fa-search"></i></button>
+            </form>
+            <div class="col-md-9 col-md-offset-2">
+                <h2>Or Add your music manually:</h2>
+            </div>
+            <form class="create-form">
+                <div class="row">
+                    <div class="col-sm-4 col-md-offset-2">
+                        <div class="form-group">
+                            <label for="album">Album Name:</label>
+                            <input type="text" id="album" name="name">
+                        </div>
+                        <div class="form-group">
+                            <label for="artist">Artist Name:</label>
+                            <input type="text" id="artist" name="name">
+                        </div>
+
+                        <button type="submit">Add To Collection</button>
+            </form>
+
+        </div>
+    </div>
+    <div class="divider"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/login.js"></script>
