--- a/public/login.html
+++ b/public/login.html
@@ -64,6 +64,14 @@
                             <label for="artist">Artist Name:</label>
                             <input type="text" id="artist" name="name">
                         </div>
+                        <div class="form-group">
+                            <label for="coverArt">Cover Art URL:</label>
+                            <input type="text" placeholder="Optional" id="coverArt" name="name">
+                        </div>
+                        <div class="form-group">
+                            <label for="summary">Album Summary:</label>
+                            <input type="text" placeholder="Optional" id="summary" name="name">
+                        </div>
 
                         <button type="submit">Add To Collection</button>
             </form>
