--- a/public/login.html
+++ b/public/login.html
@@ -12,52 +12,55 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-            </div>
-        </div>
-    </nav>
     <h1>Vinyl Destination</h1>
-    <div class="divider2"></div>
+
     <div class="container">
         <div class="row">
-            <div class="col-md-7 col-md-offset-3">
-                <h2>Search For Your Music:</h2>
-            </div>
-            <form class="search-bar">
-                <input id="searchBar" type="text" placeholder="Search..." name="search">
-                <button id="searchBtn"><i class="fa fa-search"></i></button>
-            </form>
-            <div class="col-md-9 col-md-offset-2">
-                <!-- Fix this -->
-                <a href="/addmanual"><h2>Or Add your music manually:</h2></a>
+            <!-- Search -->
+            <div class="col-md-8 col-md-offset-2">
+                <h2>Add To Your Collection</h2>
+                <form class="search-bar">
+                    <input id="searchBar" type="text" placeholder="Search for an album to add..." name="search">
+                    <button id="searchBtn"><i class="fa fa-search"></i></button>
+                </form>
             </div>
         </div>
-        <div class="row">
-            <div id="searchResults" class="hide">
-            </div>
+
+        <!-- Search Results (hidden on page load) -->
+        <div id="resultHeading" class="hide row">
+            <!-- Search result heading displays here -->
+        </div>
+        <div id="resultBody" class="hide row">
+            <!-- Search results displays here -->
+        </div>
+
+        <div class="divider2"></div>
+
+        <!-- Link to add albums manually -->
+        <div class="col-md-8 col-md-offset-2">
+            <h4>Can't Find An Album? <a href="/addmanual">Add it manually.</a></h4>
         </div>
     </div>
 
     <div class="divider2"></div>
+
+    <!-- Login Form -->
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h2>Login Form</h2>
+                <h2>Login</h2>
                 <form class="login">
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="email-input" placeholder="Email">
+                    <div class="form-row">
+                        <div class="form-group col-xs-6">
+                            <input type="email" class="form-control col" id="email-input" placeholder="Email">
+                        </div>
+                        <div class="form-group col-xs-6">
+                            <input type="password" class="form-control col" id="password-input" placeholder="Password">
+                        </div>
+                        <button type="submit" id="submit" class="btn btn-default">Login</button>
+                        <label for="submit">Not registered yet? Sign up <a href="/signup">here</a>!</label>
                     </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="password-input" placeholder="Password">
-                    </div>
-                    <button type="submit" class="btn btn-default">Login</button>
                 </form>
-                <br />
-                <p>Or sign up <a href="/signup">here</a></p>
             </div>
         </div>
     </div>
