Added search to html-routes.js, split login and search js files

--- a/public/search.html
+++ b/public/search.html
@@ -20,7 +20,7 @@
             <div class="col-md-8 col-md-offset-2">
                 <h2>Add To Your Collection</h2>
                 <form class="search-bar">
-                    <input id="searchBar" type="text" placeholder="Search for an album to add..." name="search">
+                    <input id="searchBar" type="text" placeholder="Search for an album to add..." name="searchBar">
                     <button id="searchBtn"><i class="fa fa-search"></i></button>
                 </form>
             </div>
@@ -42,4 +42,9 @@
         </div>
     </div>
 
-    <div class="divider2"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/search.js"></script>
+
+</body>
+
+</html>
