Added navigation links to all html and handlebars files, updated style.css, trim lastfm summaries

--- a/public/addManual.html
+++ b/public/addManual.html
@@ -12,15 +12,23 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-            </div>
-        </div>
-    </nav>
     <h1>Vinyl Destination</h1>
+    <div class='row'>
+        <div class='col-sm-3'>
+            <h3><a href='/'>Home</a></h3>
+        </div>
+        <div class='col-sm-3'>
+            <h3><a href='/mycollection'>My Collection</a></h3>
+        </div>
+        <div class='col-sm-3'>
+            <h3><a href='/search'>Search</a></h3>
+        </div>
+        <div class='col-sm-3'>
+            <h3><a href='/logout'>Log Out</a></h3>
+        </div>
+    </div>
+    <div class='divider3'></div>
 
-    <div class="divider2"></div>
     <div class="container">
 
         <div class="col-md-6 col-md-offset-3" id="header">
