--- a/public/login.html
+++ b/public/login.html
@@ -13,6 +13,21 @@
 
 <body>
     <h1>Vinyl Destination</h1>
+    <div class='row'>
+        <div class='col-sm-3'>
+            <h3><a href='/'>Home</a></h3>
+        </div>
+        <div class='col-sm-3'>
+            <h3><a href='/mycollection'>My Collection</a></h3>
+        </div>
+        <div class='col-sm-3'>
+            <h3><a href='/search'>Search</a></h3>
+        </div>
+        <div class='col-sm-3'>
+            <h3><a href='/logout'>Log Out</a></h3>
+        </div>
+    </div>
+    <div class='divider3'></div>
 
     <!-- Login Form -->
     <div class="container">
