--- a/public/signup.html
+++ b/public/signup.html
@@ -11,13 +11,23 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-            </div>
-        </div>
-    </nav>
     <h1>Vinyl Destination</h1>
+    <div class="row">
+        <div class="col-sm-3">
+            <h2><a href="/">Home</a></h2>
+        </div>
+        <div class="col-sm-3">
+            <h2><a href="/mycollection">My Collection</a></h2>
+        </div>
+        <div class="col-sm-3">
+            <h2><a href="/search">Search</a></h2>
+        </div>
+        <div class="col-sm-3">
+            <h2><a href="/logout">Log Out</a></h2>
+        </div>
+    </div>
+    <div class="divider3"></div>
+
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
