--- a/public/addManual.html
+++ b/public/addManual.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -36,7 +37,7 @@
         </div>
         <form class="create-form">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2">
                     <div class="form-group">
                         <label for="album">Album Name:</label>
                         <input type="text" id="albumInput" name="name">
@@ -54,9 +55,8 @@
                         <input type="text" placeholder="Optional" id="summary" name="name">
                     </div>
 
-                    <button type="button" id="addCollection">Add To
+                    <button class="btn btn-success" type="button" id="addCollection">Add To
                         Collection</button>
-                    <a href="public/login.html"><button>Return to Login Page</button></a>
         </form>
         <div class="divider2"></div>
         <ol id="result"></ol>
