--- a/public/landing.html
+++ b/public/landing.html
@@ -5,15 +5,34 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap, Bootswatch & FontAwesome -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/landing.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    
+    <!-- Stylesheet -->
+    <link href="css/landing.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <title>Vinyl Destination</title>
   </head>
   <body>
-<h1>Vinyl Destination</h1>
+    <h1>Vinyl Destination</h1>
+    <div class='row'>
+        <div class='col-sm-3'>
+            <h3><a href='/'>Home</a></h3>
+        </div>
+        <div class='col-sm-3'>
+            <h3><a href='/mycollection'>My Collection</a></h3>
+        </div>
+        <div class='col-sm-3'>
+            <h3><a href='/search'>Search</a></h3>
+        </div>
+        <div class='col-sm-3'>
+            <h3><a href='/logout'>Log Out</a></h3>
+        </div>
+    </div>
+    <div class='divider3'></div>
  <br>
    
     <div class="container n">
