--- a/public/search.html
+++ b/public/search.html
@@ -5,9 +5,14 @@
     <title>Vinyl Destination</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Bootstrap, Bootswatch & FontAwesome -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    
+    <!-- Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -36,7 +41,7 @@
                 <h2>Add To Your Collection</h2>
                 <form class="search-bar">
                     <input id="searchBar" type="text" placeholder="Search for an album to add..." name="searchBar">
-                    <button id="searchBtn"><i class="fa fa-search"></i></button>
+                    <button id="searchBtn"><i class="fa fa-search btn btn-secondary"></i></button>
                 </form>
             </div>
         </div>
