Made style tweaks, fixed buttons

--- a/public/search.html
+++ b/public/search.html
@@ -41,7 +41,7 @@
                 <h2>Add To Your Collection</h2>
                 <form class="search-bar">
                     <input id="searchBar" type="text" placeholder="Search for an album to add..." name="searchBar">
-                    <button id="searchBtn"><i class="fa fa-search btn btn-secondary"></i></button>
+                    <button id="searchBtn"><i class="fa fa-search"></i></button>
                 </form>
             </div>
         </div>
