--- a/public/addManual.html
+++ b/public/addManual.html
@@ -35,28 +35,29 @@
     <div class='divider3'></div>
 
     <div class="container">
-
-        <div class="col-md-6 col-md-offset-3" id="header">
-            <h2>Add your music manually:</h2>
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1" id="header">
+                <h2>Add your music manually:</h2>
+            </div>
         </div>
         <form class="create-form">
             <div class="row">
-                <div class="col-md-8 col-md-offset-2">
+                <div class="col-md-10 col-md-offset-1">
                     <div class="form-group">
                         <label for="album">Album Name:</label>
-                        <input type="text" id="albumInput" name="name">
+                        <input type="text" id="albumInput" name="album">
                     </div>
                     <div class="form-group">
                         <label for="artist">Artist Name:</label>
-                        <input type="text" id="artist" name="name">
+                        <input type="text" id="artist" name="artist">
                     </div>
                     <div class="form-group">
                         <label for="coverArt">Cover Art URL:</label>
-                        <input type="text" placeholder="Optional" id="coverArt" name="name">
+                        <input type="text" placeholder="Optional" id="coverArt" name="coverArt">
                     </div>
                     <div class="form-group">
                         <label for="summary">Album Summary:</label>
-                        <input type="text" placeholder="Optional" id="summary" name="name">
+                        <input type="text" placeholder="Optional" id="summary" name="summary">
                     </div>
 
                     <button class="btn btn-success" type="button" id="addCollection">Add To
